fixed padding on add-panel and button bottom cutoff

--- a/clientapp/styles/button.scss
+++ b/clientapp/styles/button.scss
@@ -8,13 +8,16 @@
 }
 .button{
   background: url(/static/button-blue.svg) no-repeat;
+  background-size: cover;
   @extend .button-base
 }
 .button.button-secondary{
   background: url(/static/button-grey.svg) no-repeat;
+  background-size: cover;
   @extend .button-base
 }
 .button.button-alert{
   background: url(/static/button-orange.svg) no-repeat;
+  background-size: cover;
   @extend .button-base
 }
