--- a/clientapp/styles/pathway-page.scss
+++ b/clientapp/styles/pathway-page.scss
@@ -20,8 +20,11 @@
     margin-top: 1em;
   }
 }
-.page-body-pathway-add-badges{
-  background: white;
+
+#addPanel{
+  padding:0;
+  background:white;
+  padding-bottom: 10px;
 }
 
 .content.active {
